2008-07-23  Frank Ch. Eigler  <fche@elastic.org>

	From James Bottomley <James.Bottomley@HansenPartnership.com>:
	* tapsets.cxx (query_dwarf_func): Silently skip inlined function
	instances that have no entrypc.

2008-07-18  Masami Hiramatsu  <mhiramat@redhat.com>

	BZ 442528 (PR6028)
	* tapsets.cxx (emit_module_decls): Add dummy kprobe on ia64.
	(emit_module_init): register dummy kprobes for fixing bsp offset on
	ia64.
	(emit_module_exit): unregister dummy kprobes on ia64.

2008-07-18  Frank Ch. Eigler  <fche@elastic.org>

	BZ 442528, From Masami Hiramatsu <mhiramat@redhat.com>
	* elaborate.h (emit_probe_local_init): New derived_probe member.
	* tapsets.cxx (dwarf_derived_probe): Implement it, for ia64 register
	unwind caching.

2008-07-17  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (iterate_over_srcfile_lines): Avoid statement wildcard
	lines without a unique address.

2008-07-17  <anithra@linux.vnet.ibm.com>

	* main.cxx (handle_interrupt): Forward received signal to process
	group.

2008-07-17  Masami Hiramatsu <mhiramat@redhat.com>

	* systemtap.spec (%files): Add stap-server and stap-serverd.
	(%files runtime): Add stap-client.

2008-07-17  David Smith  <dsmith@redhat.com>

	* systemtap.spec: Moved comment that was on the same line as
	"Version", which rpmbuild didn't like.

2008-07-17  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Produce symbol tables and section
	lists for all text-like sections, useful for -ffunction-sections type
	kernel modules.
	(emit_symbol_data): Tolerate missing unwind/symbol data during
	elf processing.  Subsequently warn about anything missing.

2008-07-16  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bumped version to 0.7.1.
	* systemtap.spec: Renamed from systemtap.spec.in; don't autoconf it
	just on account of @VERSION@.
	* Makefile.am (EXTRA_DIST): Distribute it.
	* Makefile.in, configure, testsuite/configure: Regenerated.

2008-07-16  Dave Brolley  <brolley@redhat.com>
