@@ -1,8 +1,0 @@
-#include <linux/module.h>
-
-struct module_sect_attrs x;
-
-void foo (void)
-{
-  (void) x.nsections; 
-}
