@@ -1,3 +1,7 @@
+2008-07-24  Josh Stone  <joshua.i.stone@intel.com>
+
+	* runtime/autoconf-module-nsections.c: removed
+
 2008-07-21  David Smith  <dsmith@redhat.com>
 
 	* task_finder_vma.c (__stp_tf_vma_initialize): New function to
